# LEM_PC

./: README.md  exe1.ipynb  exe2.ipynb  exe3.ipynb  pyproject.toml
matlab/: exe1.m  exe2.m  exe3.m  exe4.m  exe5.m  exe6_7.m  exe8.m  exe9.m
matlab/exe10/: exe10.m  ra.m
matlab/exe11/: exe11.m  gera_matrizes.m
matlab/exe12/: def_f.m  exe12.m
matlab/exe13/: avalia_fx.m  avalia_gx.m  calcula_mat.m  define_points.m  exe13.m
